finished CRUD tutorial

--- a/crud/config/config.env
+++ b/crud/config/config.env
@@ -1,2 +1,2 @@
 PORT=3000;
-MONGO_URI = mongodb+srv://bbruffey:H!r0Bnbradi05235!@cluster0.tk81r.mongodb.net/api-crud
+MONGO_URI = mongodb+srv://bbruffey:QzY4OXBY9ze4ooH7@cluster0.tk81r.mongodb.net/api-crud
