--- a/TrackYourCatchCO/package.json
+++ b/TrackYourCatchCO/package.json
@@ -30,6 +30,7 @@
     "express-bearer-token": "2.4.0",
     "mongoose": "5.6.7",
     "ngx-bootstrap": "5.1.1",
+    "nodemon": "^2.0.7",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
