--- a/crud-app/package.json
+++ b/crud-app/package.json
@@ -19,6 +19,8 @@
     "@angular/platform-browser": "~11.2.12",
     "@angular/platform-browser-dynamic": "~11.2.12",
     "@angular/router": "~11.2.12",
+    "@okta/okta-angular": "^3.0.1",
+    "@okta/okta-signin-widget": "^5.5.0",
     "ngx-toastr": "^13.2.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
