--- a/TrackYourCatchCO/angular.json
+++ b/TrackYourCatchCO/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "TrackYourCatchCO": {
+    "crud-app": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:application": {
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/TrackYourCatchCO",
+            "outputPath": "dist/crud-app",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -28,8 +28,8 @@
               "src/assets"
             ],
             "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/ngx-toastr/toastr.css"
             ],
             "scripts": []
           },
@@ -66,18 +66,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "TrackYourCatchCO:build"
+            "browserTarget": "crud-app:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "TrackYourCatchCO:build:production"
+              "browserTarget": "crud-app:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "TrackYourCatchCO:build"
+            "browserTarget": "crud-app:build"
           }
         },
         "test": {
@@ -92,7 +92,6 @@
               "src/assets"
             ],
             "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -115,16 +114,16 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "TrackYourCatchCO:serve"
+            "devServerTarget": "crud-app:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "TrackYourCatchCO:serve:production"
+              "devServerTarget": "crud-app:serve:production"
             }
           }
         }
       }
     }
   },
-  "defaultProject": "TrackYourCatchCO"
+  "defaultProject": "crud-app"
 }
