--- a/TrackYourCatchCO/package.json
+++ b/TrackYourCatchCO/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "track-your-catch-co",
+  "name": "crud-app",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -12,25 +12,16 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~11.2.12",
-    "@angular/cdk": "^11.2.12",
     "@angular/common": "~11.2.12",
     "@angular/compiler": "~11.2.12",
     "@angular/core": "~11.2.12",
-    "@angular/flex-layout": "^11.0.0-beta.33",
     "@angular/forms": "~11.2.12",
-    "@angular/material": "^11.2.12",
     "@angular/platform-browser": "~11.2.12",
     "@angular/platform-browser-dynamic": "~11.2.12",
     "@angular/router": "~11.2.12",
-    "@okta/jwt-verifier": "1.0.0",
     "@okta/okta-angular": "^3.0.1",
     "@okta/okta-signin-widget": "^5.5.0",
-    "cors": "2.8.5",
-    "express": "4.17.1",
-    "express-bearer-token": "2.4.0",
-    "mongoose": "5.6.7",
-    "ngx-bootstrap": "5.1.1",
-    "nodemon": "^2.0.7",
+    "ngx-toastr": "^13.2.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
