--- a/TrackYourCatchCO/package.json
+++ b/TrackYourCatchCO/package.json
@@ -12,15 +12,19 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~11.2.12",
+    "@angular/cdk": "^11.2.12",
     "@angular/common": "~11.2.12",
     "@angular/compiler": "~11.2.12",
     "@angular/core": "~11.2.12",
     "@angular/forms": "~11.2.12",
+    "@angular/material": "^11.2.12",
     "@angular/platform-browser": "~11.2.12",
     "@angular/platform-browser-dynamic": "~11.2.12",
     "@angular/router": "~11.2.12",
+    "@ng-bootstrap/ng-bootstrap": "^9.1.1",
     "@okta/okta-angular": "^3.0.1",
     "@okta/okta-signin-widget": "^5.5.0",
+    "bootstrap": "^5.0.1",
     "ngx-toastr": "^13.2.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
