--- a/week3/package.json
+++ b/week3/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "lint": "eslint **/*.ts --fix",
-    "test": "mocha -r ts-node/register src/**/*.spec.ts"
+    "test": "mocha -r ts-node/register src/**/*.spec.ts",
+    "tsc": "tsc"
   },
   "author": "",
   "license": "ISC",
@@ -15,11 +16,13 @@
   "devDependencies": {
     "@types/chai": "^4.2.5",
     "@types/mocha": "^5.2.7",
+    "@types/node": "^15.6.0",
+    "@types/typescript": "^2.0.0",
     "@typescript-eslint/eslint-plugin": "^2.7.0",
     "@typescript-eslint/parser": "^2.7.0",
     "chai": "^4.2.0",
     "eslint": "^6.6.0",
     "mocha": "^6.2.2",
-    "ts-node": "^8.5.0"
+    "ts-node": "^8.10.2"
   }
 }
