--- a/TrackYourCatchCO/angular.json
+++ b/TrackYourCatchCO/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "crud-app": {
+    "TrackYourCatchCO": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:application": {
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/crud-app",
+            "outputPath": "dist/TrackYourCatchCO",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -68,18 +68,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "crud-app:build"
+            "browserTarget": "TrackYourCatchCO:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "crud-app:build:production"
+              "browserTarget": "TrackYourCatchCO:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "crud-app:build"
+            "browserTarget": "TrackYourCatchCO:build"
           }
         },
         "test": {
@@ -117,16 +117,16 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "crud-app:serve"
+            "devServerTarget": "TrackYourCatchCO:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "crud-app:serve:production"
+              "devServerTarget": "TrackYourCatchCO:serve:production"
             }
           }
         }
       }
     }
   },
-  "defaultProject": "crud-app"
+  "defaultProject": "TrackYourCatchCO"
 }
