--- a/TrackYourCatchCO/package.json
+++ b/TrackYourCatchCO/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "trackourcatchcc",
+  "name": "trackyourcatch",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -17,6 +17,7 @@
     "@angular/compiler": "~11.2.12",
     "@angular/core": "~11.2.12",
     "@angular/forms": "~11.2.12",
+    "@angular/google-maps": "^12.0.3",
     "@angular/material": "^11.2.12",
     "@angular/platform-browser": "~11.2.12",
     "@angular/platform-browser-dynamic": "~11.2.12",
@@ -24,6 +25,7 @@
     "@ng-bootstrap/ng-bootstrap": "^9.1.1",
     "@okta/okta-angular": "^3.0.1",
     "@okta/okta-signin-widget": "^5.5.0",
+    "@types/googlemaps": "^3.43.3",
     "bootstrap": "^5.0.1",
     "ngx-toastr": "^13.2.1",
     "rxjs": "~6.6.0",
