--- a/TrackYourCatchCO/package.json
+++ b/TrackYourCatchCO/package.json
@@ -27,6 +27,7 @@
     "@okta/okta-signin-widget": "^5.5.0",
     "@types/googlemaps": "^3.43.3",
     "bootstrap": "^5.0.1",
+    "ngx-loading": "^8.0.0",
     "ngx-toastr": "^13.2.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
