--- a/APIService/package.json
+++ b/APIService/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "nodemon src/app.js",
+    "lint": "eslint src/**/*.js --fix"
   },
   "keywords": [],
   "author": "",
@@ -17,5 +18,8 @@
     "mongoose": "^5.12.9",
     "nodemon": "^2.0.7",
     "router": "^1.3.5"
+  },
+  "devDependencies": {
+    "eslint": "^7.29.0"
   }
 }
